// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component(snapshots): Avatar should render with no props 1`] = `
<View
  pointerEvents="auto"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#0078ff",
      "borderRadius": 16,
      "flex": undefined,
      "flexDirection": undefined,
      "height": 32,
      "justifyContent": "center",
      "margin": undefined,
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
      "padding": undefined,
      "paddingBottom": undefined,
      "paddingHorizontal": undefined,
      "paddingLeft": undefined,
      "paddingRight": undefined,
      "paddingTop": undefined,
      "width": 32,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 16,
        "fontWeight": "bold",
      }
    }
  >
    ?
  </Text>
</View>
`;

exports[`Component(snapshots): Avatar should render with props 1`] = `
<Image
  source={
    Object {
      "uri": "somehttp-image-uri",
    }
  }
  style={
    Object {
      "backgroundColor": "#0078ff",
      "borderRadius": 5,
      "height": 32,
      "width": 32,
    }
  }
/>
`;

exports[`Component(snapshots): Avatar should render with source props 1`] = `
<Image
  source={
    Object {
      "uri": "somehttp-image-uri",
    }
  }
  style={
    Object {
      "backgroundColor": "#0078ff",
      "borderRadius": 16,
      "height": 32,
      "width": 32,
    }
  }
/>
`;

exports[`Component(snapshots): Avatar should render with title and background props 1`] = `
<View
  pointerEvents="auto"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#000000",
      "borderRadius": 5,
      "flex": undefined,
      "flexDirection": undefined,
      "height": 32,
      "justifyContent": "center",
      "margin": undefined,
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
      "padding": undefined,
      "paddingBottom": undefined,
      "paddingHorizontal": undefined,
      "paddingLeft": undefined,
      "paddingRight": undefined,
      "paddingTop": undefined,
      "width": 32,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 16,
        "fontWeight": "bold",
      }
    }
  >
    Sa
  </Text>
</View>
`;
